Resolved link colors on full bleed features.

--- a/style.css
+++ b/style.css
@@ -3784,6 +3784,10 @@ a code {
   text-decoration: none;
 }
 
+.page .row .box.fullbleed a {
+	color:#fff;
+}
+
 #uwred #page a, #uwred #page a code {
 	color: #ac0809;
 }
